--- a/index.html
+++ b/index.html
@@ -42,128 +42,206 @@
 
             </ul>
         </div>
-</nav>
+    </nav>
 
-        <section id="School name">
-            <img src="logo.jpg" class="profile img-circle">
-            <br>
-            <br>
-            <h1> <span id="name">Sindhi High School</span></h1>
-            <br>
-            <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Gov2bFcZDSA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-
-
-        <div class="container">
-            <div class="page-header" id="Campus life">
+    <section id="School name">
+        <img src="logo.jpg" class="profile img-circle">
+        <br>
+        <br>
+        <h1> <span id="name">Sindhi High School</span></h1>
+        <br>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gov2bFcZDSA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
 
 
-                <h2 class="text-capitalize">Campus life</h2>
-                <div class="row">
-                    <div class="Campus life_mainDiv">
+    <div class="container">
+        <div class="page-header" id="Campus life">
 
 
-                        <img class="img-responsive img-left" src="basketball.jpg">
-                        <h4 class="text-left text-capitalize"><kbd>Basket ball court</kbd></h4>
-                        <hr>
-                        <h5 class="text-success text-left text-capitalize">This is a very good court in international standards</h5>
+            <h2 class="text-capitalize">Campus life</h2>
+            <div class="row">
+                <div class="Campus life_mainDiv">
 
 
-                    </div>
-                    <div class="Campus life_mainDiv">
-                        <img class="img-responsive img-left" src="golden.jpg">
-                        <h4 class="text-left text-capitalize"><kbd>Golden Jubilee Hall</kbd></h4>
-                        <hr>
-                        <h5 class="text-success text-left text-capitalize">This is a very conventional hall</h5>
-
-
-                        <img class="img-responsive img-left" src="audi.jpg">
-                        <h4 class="text-left text-capitalize"><kbd>Auditorium</kbd></h4>
-                        <hr>
-                        <h5 class="text-success text-left text-capitalize">This is a very good Auditorium</h5>
-
-
-                    </div>
+                    <img class="img-responsive img-left" src="basketball.jpg">
+                    <h4 class="text-left text-capitalize"><kbd>Basket ball court</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">This is a very good court in international standards</h5>
 
 
                 </div>
-            </div>
+                <div class="Campus life_mainDiv">
+                    <img class="img-responsive img-left" src="golden.jpg">
+                    <h4 class="text-left text-capitalize"><kbd>Golden Jubilee Hall</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">This is a very conventional hall</h5>
+                </div>
+                <div>
 
+                    <img class="img-responsive img-left" src="audi.jpg">
+                    <h4 class="text-left text-capitalize"><kbd>Auditorium</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">This is a very good Auditorium</h5>
+
+
+                </div>
+
+
+            </div>
         </div>
 
-        <div class="page-header" id="achievements">
-  		<h2 class="text-capitalize">school achievements</h2>
-  </div>
-  <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement1" >
-    Inter School Debate On Environment Pollution <i class="fa fa-sort-desc" ></i>
-  </div>
+    </div>
+<section id="Achievements" style="width: 100%;">
 
-  <div id="school_achievement1" class="collapse">
-      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
-	  		<img src="https://i.postimg.cc/KztDSHbx/se1.jpg" class="img-responsive img-thumbnail"> 
-	  </div>
+    <div class="page-header" id="achievements">
+        <h2 class="text-capitalize">school achievements</h2>
+    </div>
+    <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement1">
+        Inter School Debate On Environment Pollution <i class="fa fa-sort-desc"></i>
+    </div>
 
-	  <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text" >
-		  <h5 class="text-success text-left text-capitalize">Won first prize in inter school debate on environment pollution  
-      </h5>
-		  <p>Write about this achievement</p>
-	  </div>
-  </div>
+    <div id="school_achievement1" class="collapse">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+            <img src="https://i.postimg.cc/KztDSHbx/se1.jpg" class="img-responsive img-thumbnail">
+        </div>
 
-  <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement2" >
-    Inter School Football Competition<i class="fa fa-sort-desc" ></i>
-  </div>
+        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+            <h5 class="text-success text-left text-capitalize">Won first prize in inter school debate on environment pollution
+            </h5>
+            <p>Write about this achievement</p>
+        </div>
+    </div>
 
-  <div id="school_achievement2" class="collapse">
-	 
-   <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
-  		<img src="https://i.postimg.cc/sxcP1G1L/sm2.jpg" class="img-responsive img-thumbnail" >
-  	</div>
+    <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement2">
+        Inter School Football Competition<i class="fa fa-sort-desc"></i>
+    </div>
 
-  	<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text" >
-      <h5 class="text-success text-left text-capitalize">Came second in inter school football competition
-      </h5>
-      <p>Write about this achievement</p>
-  	</div>
-  </div>
+    <div id="school_achievement2" class="collapse">
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+            <img src="https://i.postimg.cc/sxcP1G1L/sm2.jpg" class="img-responsive img-thumbnail">
+        </div>
+
+        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+            <h5 class="text-success text-left text-capitalize">Came second in inter school football competition
+            </h5>
+            <p>Write about this achievement</p>
+        </div>
+    </div>
 
 
 
-  <div class="bg-primary  movie_head" data-toggle="collapse" data-target="#school_achievement3" >
-    Inter School Science Project Competition<i class="fa fa-sort-desc" ></i>
-  </div>
+    <div class="bg-primary  movie_head" data-toggle="collapse" data-target="#school_achievement3">
+        Inter School Science Project Competition<i class="fa fa-sort-desc"></i>
+    </div>
 
-  <div id="school_achievement3" class="collapse">
+    <div id="school_achievement3" class="collapse">
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+            <img src="https://i.postimg.cc/zXzS67cY/sm3.jpg" class="img-responsive img-thumbnail">
+        </div>
+
+        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+            <h5 class="text-success text-left text-capitalize">Won second price in inter school Science Project competition
+            </h5>
+            <p>Write about this achievement</p>
+        </div>
+    </div>
+
+    </section>
+
+    <section id="What’s New" style="width: 100%;">
+
+
+    </section>
+
+    <hr>
+
+    <section id="Alumni">
+
+        <h1>Alumni</h1>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="alumni" list data-toggle="modal" data-target="#school_alumni">
+            <hr>
+            <img src="https://lh3.googleusercontent.com/proxy/1vJ_LWrhVT86C3jBvWkXsgZN_nlwpgzpTMeUXDc_3tAgqembiaUEMEETg6uafnrw0Rd-zqVCnLboTsaGDvpt6gKfANAWqyAuYcoUnTI6h-UOGZzZ5GXu_H3lQTnjCr3PAV_Ps5tQRA" class="img_responsive
+            ">
+            <p class="text primary">Maithri Satyadev</p>
+        </div>
+
+        <div class="modal fade" id="school_alumni">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Maithri Satyadev</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <img src="https://lh3.googleusercontent.com/proxy/1vJ_LWrhVT86C3jBvWkXsgZN_nlwpgzpTMeUXDc_3tAgqembiaUEMEETg6uafnrw0Rd-zqVCnLboTsaGDvpt6gKfANAWqyAuYcoUnTI6h-UOGZzZ5GXu_H3lQTnjCr3PAV_Ps5tQRA" class="img_responsive img_modal">
+                        <p class="p_modal">She is the principal of the school, Sindhi High School</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="alumni2" list data-toggle="modal" data-target="#school_alumni2">
+            <hr>
+            <img src="vice.jpg" class="img_responsive
+            ">
+            <p class="text primary">Mrs Chitralekha</p>
+        </div>
+
+        <div class="modal fade" id="school_alumni2">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Mrs Chitralekha</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <img src="vice.jpg">
+                        <p class="p_modal">She is the vice principal of the school, Sindhi High School</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="alumni3" list data-toggle="modal" data-target="#school_alumni3">
+            <hr>
+            <img src="coord.jpg" class="img_responsive
+            ">
+            <p class="text primary">Mrs Chitralekha</p>
+        </div>
+
+        <div class="modal fade" id="school_alumni3">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Ms. N Ramamani Sampath</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <img src="coord.jpg">
+                        <p class="p_modal">She is the Subject Co-ordinator of the school, Sindhi High School</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
     
-	 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
-  		<img src="https://i.postimg.cc/zXzS67cY/sm3.jpg" class="img-responsive img-thumbnail" >
-  	</div>
-
-  	<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text" >
-      <h5 class="text-success text-left text-capitalize">Won second price in inter school Science Project competition
-      </h5>
-      <p>Write about this achievement</p>
-  	</div>
-  </div>
-
-
-
-        <section id="What’s New" style="width: 100%;">
-
-
-        </section>
-
-        <hr>
-
-        <section id="Alumni">
-
-        </section>
-        <hr>
-
-        <section id="Contact us">
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15547.062065069742!2d77.5987225!3d13.0505921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x64e6d228284d676d!2sSindhi%20High%20School%2C%20Kempapura!5e0!3m2!1sen!2sin!4v1623494276156!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </section>
-        <hr>
+    <br>
+    <br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <hr>
+    <section id="Contact us">
+        <div>
+        <h1>Contact Us</h1>
+            
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15547.062065069742!2d77.5987225!3d13.0505921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x64e6d228284d676d!2sSindhi%20High%20School%2C%20Kempapura!5e0!3m2!1sen!2sin!4v1623494276156!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+    </section>
+    <hr>
 </body></html>
